--- a/BT1.css
+++ b/BT1.css
@@ -39,6 +39,7 @@ aside2 {
     height: 220px;
     background-color: yellow;
     font-family: 'Times New Roman';
+   
 }
 
 .Dong2 {
@@ -47,3 +48,6 @@ aside2 {
 }
 
 
+Trang đăng ký.html {
+    text-align: center;
+}
